--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  cached_network_image: ^3.2.3
+  webview_flutter: ^2.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
